# MatrixMultiplication

./: .gitignore  CMakeLists.txt  CMakePresets.json  Makefile  README.md
analysis/windows_vs_wsl/: aggregated_results_compare.json  windows_benchmark.json  wsl_benchmark.json
benchmarks/: CMakeLists.txt  benchmark.cpp
lib/: CMakeLists.txt  MatrixMul.cpp  MatrixMul.h
profiling/: CMakeLists.txt  cache_optimized_array_matrix_mul.cpp  matrix_size.h  naive_array_matrix_mul.cpp  profiling.cpp
tests/: CMakeLists.txt  test.cpp
